--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,6 @@ h2 {
   border-radius: 10px;
   width: 200px;
   margin: 20px;
-  padding: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -414,13 +413,16 @@ p {
   border-radius: 8px;
   overflow: hidden;
   text-align: center;
+  padding: 10px;
+  margin: 10px;
   background-color: #f9f9f9;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
 .event-card:hover {
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3); 
-  transform: translateY(-8px) scale(1.03); 
-  background-color: #f7f7f7; 
+  box-shadow: 0 16px 32px rgba(0, 0, 0, 0.35);
+  transform: translateY(-10px) scale(1.05);
+  background-color: #eaeaea;
 }
 
 
@@ -662,3 +664,4 @@ p {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); 
   border-radius: 10px; 
 }
+
