--- a/src/App.css
+++ b/src/App.css
@@ -350,25 +350,35 @@ p {
 .go-back-button {
   background-color: #6c757d;
 }
-
 .go-back-button:hover {
   background-color: #5a6268;
 }
 
 .movie-video {
-  width: 100%;
-  height: 100%; 
-  object-fit: cover; 
-  text-align: center;
+  width: 100%; /* Make video width 100% of its container */
+  height: 100%; /* Make video height 100% of its container */
+  object-fit: contain; /* Ensure the entire video fits within the container without distortion */
 }
 
 .video-container {
   text-align: center;
   padding: 20px;
-  height: 100%; 
-  position: relative; 
+  height: 400px; /* Set a specific height for the video container */
+  width: 100%; /* Ensure it takes full width of its parent */
+  position: relative;
+  overflow: hidden; /* Hide overflow to keep it within bounds */
 }
 
+.video-container .go-back-button {
+  position: absolute; /* Position the button outside */
+  top: 10px; /* Adjust as needed */
+  left: 10px; /* Adjust as needed */
+  z-index: 1; /* Ensure it appears above the video */
+}
+
+.show-details {
+  padding: 20px; /* General padding for the entire show details component */
+}
 
 /*EventSection more css*/
 .event-section {
